# python-engine

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  main.py  pyproject.toml  run_www.py
.github/workflows/: aws.yml
apps/www/: pyproject.toml
apps/www/app/: main.py
apps/www/app/models/api/requests/: story.py
apps/www/app/models/api/responses/: story.py
apps/www/app/routers/: story.py  system.py
apps/www/app/services/: story.py
apps/www/core/: config.py
common/: pyproject.toml
common/app/modules/agents/: __init__.py  agent.py  builtin_prompts.py  execution_context.py  history.py  protocol.py  spawnable.py  subagent_config.py  subagent_runs.py  test_agent_openrouter.py
common/app/modules/agents/tools/: __init__.py  base.py  builtin.py  execute.py
common/app/modules/db/: __init__.py
common/app/modules/db/mongo/: __init__.py  store_health.py
common/app/modules/llm/: clients.py
common/app/modules/llm/agent_completion/: __init__.py  backend_protocol.py  fake.py  gemini_backend.py  openai_backend.py  openai_chat_stream.py  prompt_completion.py  request.py  router.py  stream_sink.py  tool_protocol.py
common/app/modules/llm/functions/: __init__.py
common/app/modules/llm/functions/story/: models.py
common/app/modules/llm/functions/story/generate/: llm_component.py
common/app/modules/llm/messages/: __init__.py  blocks.py  completion.py
common/app/modules/llm/promtps/: __init__.py
common/app/modules/llm/providers/: __init__.py
common/app/modules/tts/providers/: __init__.py  base.py  smallest_ai.py
common/core/: common_settings.py  config.py  constants.py  exceptions.py  logging.py  s3.py
common/core/db/: __init__.py
common/core/db/mongo/: __init__.py  client.py
common/core/interfaces/: __init__.py
common/core/interfaces/repository/: __init__.py  store_health.py
common/tests/: __init__.py  test_agents.py  test_builtin_tools.py  test_mongo.py
docs/: agents-and-llm-modules.md
