[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiobotocore==2.22.0",
    "aiohttp==3.11.18",
    "google-genai==1.49.0",
    "httpx==0.28.1",
    "logfire==4.16.0",
    "openai==1.20.0",
    "pydantic==2.10.4",
    "pymongo==4.15.5",
    "python-dotenv==1.0.1",
    "smallestai==3.0.3",
]

[tool.hatch.build.targets.wheel]
packages = []
force-include = { "app" = "common/app", "core" = "common/core" }
