# www-only dependencies. From repo root: `uv sync --frozen --package www`.
# Run: `PYTHONPATH=. uv run --package www python run_www.py` (apps.www is not installed as a package).

[project]
name = "www"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "common",
    "fastapi==0.115.6",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.0",
]

[tool.uv]
package = false

[tool.uv.sources]
common = { workspace = true }
